Vue Road Map Project Set up

--- a/RoadMap/index.html
+++ b/RoadMap/index.html
@@ -33,7 +33,11 @@
             </div>
         </header>
         <!-- /.header -->
-        <div class="contents"></div>
+        <div class="contents">
+
+            
+
+        </div>
         <!-- /.contents -->
         <footer class="footer"></footer>
         <!-- /.footer -->
