Flow Chart Update #1 (draw line)

--- a/RoadMap/RoadMap/index.html
+++ b/RoadMap/RoadMap/index.html
@@ -32,8 +32,8 @@
           </div>
       </header>
       <!-- /.header -->
-      <div class="contents">
-        <div id="app"></div>
+      <div class="contents" id="contents">
+        
       </div>
       <!-- /.contents -->
       <footer class="footer"></footer>
