--- a/RoadMap/index.html
+++ b/RoadMap/index.html
@@ -4,25 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vue Road Map</title>
+    <title>Flow Chart</title>
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="wrapper">
-        <header class="header">
-            <div class="container text-center">
+        <div class="contents" id="flowChart">
+        </div>
+        <!-- /.contents -->
+        <footer class="footer"></footer>
+        <!-- /.footer -->
+    </div>
+    <!-- /.wrapper -->
+    <script src="js/itech/itech.js"></script>
+    <script src="js/itech/itech-ui-flowchart.js"></script>
+    <script src="js/script.js"></script>
+</body>
+</html>
+
+<!-- <header class="header">
+             <div class="container text-center">
                 <h1 class="logo">Vue JS Road Map</h1>
                 <ul class="nav">
                     <li class="nav-li">
                         <a href="https://github.com/SaiZawMyint/portfolio/tree/VueRoadMap" class="link icon-view">
-                            <img src="img/img_github.png" alt="github.com" class="img">
+                            <img src="RoadMap/src/assets/img/img_github.png" alt="github.com" class="img">
                             <span class="lab">Github</span>
                         </a>
                     </li>
                     <li class="nav-li">
                         <a href="https://github.com/SaiZawMyint/portfolio/tree/VueRoadMap" class="link icon-view">
-                            <img src="img/img_facebook.png" alt="github.com" class="img">
+                            <img src="RoadMap/src/assets/img/img_facebook.png" alt="github.com" class="img">
                             <span class="lab">Facebook</span>
                         </a>
                     </li>
@@ -30,18 +43,6 @@
                         <a href="" class="link icon-view"></a>
                     </li>
                 </ul>
-            </div>
-        </header>
+            </div> 
+        </header> -->
         <!-- /.header -->
-        <div class="contents">
-
-            
-
-        </div>
-        <!-- /.contents -->
-        <footer class="footer"></footer>
-        <!-- /.footer -->
-    </div>
-    <!-- /.wrapper -->
-</body>
-</html>
